@@ -15,6 +15,8 @@
  - [2041754] Feature Request #1896717 Registration notification missing information about instance
  - Patch for SF bugs 1775059 and 2352146 2 Authentications with LoginPage cause connection exhaust
 
+(Elliot Metsger)
+ - Patch for SF bug #2016130 checksum checker can not retrieve very large bitstream
 
 1.5.1 final
 ===========
